fix header overflow

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,17 @@
   all: unset;
 }
 
+@media screen and (min-width: 481px) {
+  html {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 14px;
+  }
+}
+
 html {
   height: -webkit-fill-available;
   background-color: #0F0823;
@@ -160,6 +171,23 @@ img {
   object-position: center; /* Center the image within the element */
   height: 100px;
   width: 100px;
+}
+
+.mask-header {
+  -webkit-mask-image: linear-gradient(
+          0deg,
+          transparent 0%,
+          black 15%,
+          black 85%,
+          transparent 100%
+  );
+  mask-image: linear-gradient(
+          0deg,
+          transparent 0%,
+          black 15%,
+          black 85%,
+          transparent 100%
+  );
 }
 
 .mask-swiper {
